# controllers/nimtaController.js
@@ -1,11 +1,13 @@
-import { nimtaService } from "../services/index.js";
+import { nimtaService, relativesService } from "../services/index.js";
 import { jwtAuthentication } from "../utils/jwt.js";
+import { baanService } from "../services/index.js";
+
 
 export class NimtaController {
 
   static async getNimta(req, res) {
     const customer = jwtAuthentication.verifyToken(req); 
-    const nimta = await nimtaService.getAll(
+    const nimta = await nimtaService.getNimta(
       req.params.pariwarId,
       customer._id
     );
@@ -17,7 +19,6 @@ export class NimtaController {
     const customer = jwtAuthentication.verifyToken(req);  
     const nimta = await nimtaService.createNimta({
       ...req.body,
-      nimtaId: req.params.nimtaiId,
       customerId: customer._id,
     });
 
@@ -31,10 +32,27 @@ export class NimtaController {
     res.send(nimta);
   }
 
-  static async deleteNimtaById (req, res) {
+  static async deleteNimtaById(req, res) {
     const customer = jwtAuthentication.verifyToken(req);  
     await nimtaService.deleteNimtaById(req.params.id, customer._id);
 
     res.send({ success: true });
+  }
+
+  static async addRelativesByIds(req,res) {
+    const customer = jwtAuthentication.verifyToken(req); 
+    const relativeIds = req.body.relativeIds;
+    const baanIds = req.body.baanIds;
+    const baans = await baanService.getBaanByIds(baanIds);
+    const newRelatives = await relativesService.createRelativesByBaans(baans, req.params.pariwarId, customer._id);
+
+    newRelatives.forEach(relative => {
+      relativeIds.push(relative._id);
+    });
+
+    const nimta = await nimtaService.addRelativesById(req.params.id, relativeIds);
+
+    res.send(nimta);
+
   }
 }
