# controllers/pariwarRolesController.js
@@ -4,19 +4,19 @@ import { jwtAuthentication } from "../utils/jwt.js";
 export class PariwarRolesController {
 
   static async getPariwarRoles(req, res) {
-   // const customer = jwtAuthentication.verifyToken(req); 
+    const customer = jwtAuthentication.verifyToken(req); 
     const pariwarRoles = await pariwarRolesService.getPariwar(
-      //customer._id
+      customer._id
     );
 
     res.send(pariwarRoles);
   }
 
   static async createPariwarRoles (req, res) {
-   // const customer = jwtAuthentication.verifyToken(req);  
+    const customer = jwtAuthentication.verifyToken(req);  
     const pariwarRoles = await pariwarRolesService.createPariwar({
       ...req.body,
-   // customerId: customer._id,
+      customerId: customer._id,
     });
 
     res.send(pariwarRoles);
